--- a/static/html/index.html
+++ b/static/html/index.html
@@ -73,12 +73,12 @@
                                   <span aria-hidden="true">&times;</span>
                                 </button>
                               </div>
-                              <div class="modal-body">
-                                  <p> Performance модели: <output name="scores"></output></p>
-                                  Accuracy: <div id="accuracy"></div>
-                                  Precision: <div id="precision"></div>
-                                  Recall: <div id="recall"></div>
-                                  F score: <div id="f_score"></div>
+                              <div id="modal_body" class="modal-body">
+                                  <div id="mistake"></div>
+                                  <div id="accuracy"></div>
+                                  <div id="precision"></div>
+                                  <div id="recall"></div>
+                                  <div id="f_score"></div>
                               </div>
                             </div>
                           </div>
